shuffle/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shuffle
  annotations:
    kompose.cmd: ./kompose -f converted_compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f converted_compose.yml convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/shuffle: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: BACKEND_HOSTNAME
              value: shuffle-backend
          image: ghcr.io/frikky/shuffle-frontend:latest
          name: shuffle-frontend
          ports:
            - containerPort: 80
            - containerPort: 443
          resources: {}
      hostname: shuffle-frontend
      restartPolicy: Always
status: {}
