shuffle/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shuffle
  annotations:
    kompose.cmd: ./kompose -f converted_compose.yml convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 80
    - name: "3443"
      port: 3443
      targetPort: 443
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
